--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^10.7.1",
     "next": "13.5.6",
     "react": "^18",
@@ -16,7 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3"
