--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "firebase": "^10.7.1",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
     "eslint": "^8.56.0"
-}
+  }
 }
